# fund-baby

./: .gitignore  README.md  env.example  next.config.js  package-lock.json  package.json
.github/workflows/: desktop-release.yml
app/: globals.css  layout.jsx  page.jsx
app/api/: fund.js
app/components/: Announcement.jsx  Icons.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
